@@ -18,7 +18,8 @@ bayNorm(
   FIX_MU = TRUE,
   GR = FALSE,
   BB_SIZE = TRUE,
-  verbose = TRUE
+  verbose = TRUE,
+  out.sparse = FALSE
 )
 }
 \arguments{
@@ -102,6 +103,10 @@ prior using maximization of marginal likelihood,
 and then use it for adjusting MME estimate of SIZE Default is TRUE.}
 
 \item{verbose}{print out status messages. Default is TRUE.}
+
+\item{out.sparse}{Only valid for mean version: 
+Whether the output is of type dgCMatrix or not. 
+Default is FALSE.}
 }
 \value{
 List containing 3D arrays of normalized
